syntax = "proto3";
package example.empl_curd;

message CreateRequest {
     string first_name = 1;
     string last_name =2;
     string swiftpost= 3;
     string  joindate =4;
     string  salary = 5;


}

message Empty {}


message Response {
    int32 status = 1;
    string message = 2;
}

message UpdateRequest {
    int32 id=1;
    string first_name = 2;
    string last_name =3;
    string swiftpost= 4;
    string joindate =5;
    string  salary = 6;

}

message Details {
    string Name= 1;
    string swiftpost= 2;
    string joindate =3;
    string  salary = 4;
    string duration =5;
    string AnnualSalary =6;
    
   
}


 message ListResponse {
repeated Details dataList = 1;
  
    
}

message GetRequest {
    int32 id = 1;
}



message specificResponse {
Details dataList=1;



 


}


 

